--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,11 +1,15 @@
+html {
+	height: 100% !important;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
+    height: 100% !important;
 }
 
 main {
-	flex: 1;
+	flex-shrink: 0 !important;
 }
 
 .row.narrow-gutters {
